--- a/package.json
+++ b/package.json
@@ -10,13 +10,17 @@
         "@inertiajs/react": "^1.0.0",
         "@tailwindcss/forms": "^0.5.3",
         "@vitejs/plugin-react": "^4.2.0",
-        "autoprefixer": "^10.4.12",
+        "autoprefixer": "^10.4.19",
         "axios": "^1.6.4",
+        "flowbite": "^2.3.0",
         "laravel-vite-plugin": "^1.0",
-        "postcss": "^8.4.31",
+        "postcss": "^8.4.38",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "tailwindcss": "^3.2.1",
+        "tailwindcss": "^3.4.3",
         "vite": "^5.0"
+    },
+    "dependencies": {
+        "flowbite-react": "^0.8.0"
     }
 }
