--- a/package.json
+++ b/package.json
@@ -21,6 +21,10 @@
         "vite": "^5.0"
     },
     "dependencies": {
+        "@emotion/react": "^11.11.4",
+        "@emotion/styled": "^11.11.5",
+        "@mui/icons-material": "^5.15.15",
+        "@mui/material": "^5.15.15",
         "flowbite-react": "^0.8.0"
     }
 }
