--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "@mui/icons-material": "^5.15.15",
         "@mui/material": "^5.15.15",
         "flowbite-react": "^0.8.0",
-        "react-responsive": "^10.0.0"
+        "react-responsive": "^10.0.0",
+        "react-router-dom": "^6.22.3"
     }
 }
