--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "flowbite-react": "^0.8.0",
         "react-responsive": "^10.0.0",
         "react-router-dom": "^6.22.3",
+        "react-select": "^5.8.0",
         "zustand": "^4.5.2"
     }
 }
