cambios .env.example

--- a/.env.example
+++ b/.env.example
@@ -74,3 +74,13 @@ PAYPAL_SANDBOX_CLIENT_SECRET=
 #PayPal Setting & API Credentials - live
 PAYPAL_LIVE_CLIENT_ID=
 PAYPAL_LIVE_CLIENT_SECRET=
+
+
+MAIL_MAILER=smtp
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=587
+MAIL_USERNAME=
+MAIL_PASSWORD=
+MAIL_ENCRYPTION=tls
+MAIL_FROM_ADDRESS=
+MAIL_FROM_NAME=PCreate
