--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
     "dependencies": {
         "@emotion/react": "^11.11.4",
         "@emotion/styled": "^11.11.5",
-        "@mui/icons-material": "^5.15.15",
+        "@mui/icons-material": "^5.15.19",
         "@mui/material": "^5.15.15",
         "flowbite-react": "^0.8.0",
         "react-responsive": "^10.0.0",
         "react-router-dom": "^6.22.3",
         "react-select": "^5.8.0",
+        "react-slick": "^0.30.2",
+        "slick-carousel": "^1.8.1",
         "zustand": "^4.5.2"
     }
 }
